tests/snapshots/custom_menu/Admin API Tool/[Style] - ID 19.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Style]" id="19">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">C2E35EA1-1B05-4AB9-8F74-AF46C16D42FB</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Stil" value="21"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
