tests/snapshots/custom_menu/Admin API Tool/[Text Color] - ID 20.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Text Color]" id="20">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">5F85F7E7-4887-4E78-A6CA-601E084F967B</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Textfarbe" value="181"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
